--- a/front/src/css/IdentitySelection.css
+++ b/front/src/css/IdentitySelection.css
@@ -1,4 +1,5 @@
 .IdentitySelectionPage {
+    position: absolute;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -9,7 +10,7 @@
 
 .IdentitySelectionContainer {
     height: auto;
-    width: 22%;
+    width: 320px;
     background: rgba(255, 255, 255, 0.8);
     display: flex;
     flex-direction: column;
@@ -22,6 +23,9 @@
 
 .IdentitySelectionBackImage {
     position: absolute;
+    height: 100%;
+    width: 100%;
+    background-size: 100% 100%;
     z-index: -1;
 }
 
